문서 서식 변경 - 포스트 타이틀/본문 폰트 변경 -> 나눔고딕 - 줄간격 변경

--- a/_sass/so-simple/_entries.scss
+++ b/_sass/so-simple/_entries.scss
@@ -28,7 +28,7 @@
   margin-bottom: 0.5rem;
   font-family: $headline-font-family;
   font-weight: $entry-title-weight;
-  font-style: italic;
+  font-style: bold;
   letter-spacing: -1px;
   word-wrap: break-word; /* break long words that could overflow */
 
