--- a/_sass/so-simple/_variables.scss
+++ b/_sass/so-simple/_variables.scss
@@ -42,11 +42,11 @@ $serif-font-family: "Lora", serif !default;
 $sans-serif-font-family: "Source Sans Pro", sans-serif !default;
 $monospace-font-family: Menlo, Consolas, Monaco, "Courier New", Courier, monospace !default;
 
-$base-font-family: $sans-serif-font-family !default;
-$headline-font-family: $sans-serif-font-family !default;
+$base-font-family: "Nanum Gothic" !default;
+$headline-font-family: "Nanum Gothic" !default;
 $title-font-family: $serif-font-family !default;
 $description-font-family: $serif-font-family !default;
-$meta-font-family: $serif-font-family !default;
+$meta-font-family: "Nanum Gothic" !default;
 
 $page-title-weight: bold !default;
 $entry-title-weight: bold !default;
