--- a/_sass/so-simple/_page.scss
+++ b/_sass/so-simple/_page.scss
@@ -12,7 +12,7 @@
 .page-title {
   @include fluid-type($min-vw, $max-vw, 30px, 45px);
   margin-bottom: 0.5em;
-  font-style: italic;
+  font-style: bold;
   font-weight: $page-title-weight;
   
   letter-spacing: -2px;
