[서식] 초기 화면 글 구분선 추가 - 리스트에서 글 사이에 구분선을 추가하여 가독성을 높임

--- a/_includes/entry.html
+++ b/_includes/entry.html
@@ -27,8 +27,9 @@
       {% if entry.excerpt %}
         {{ entry.excerpt | markdownify }}
         <div class="more-link">
-          <a href="{{ entry.url | relative_url }}">{{ site.data.text[site.locale].read_more | default: 'Read More' }}</a>
+          <a href="{{ entry.url | relative_url }}" style="font-style:italic;" >{{ site.data.text[site.locale].read_more | default: 'Read More' }}</a>
         </div>
+        <hr class="horizontal">
       {% endif %}
     </div>
   {% endunless %}
