--- a/_sass/so-simple/_entries.scss
+++ b/_sass/so-simple/_entries.scss
@@ -116,6 +116,15 @@
       text-decoration: none;
     }
   }
+
+  .horizontal {
+    background: #fff;
+    padding: 0 0px;
+
+    margin-botoom: 5pm;
+    position: relative;
+    top: 20px;
+  }
 }
 
 /*
